fix: enhance HeroSection styles for improved text alignment and centering

--- a/src/app/home.module.scss
+++ b/src/app/home.module.scss
@@ -87,20 +87,20 @@
 }
 
 /* Estilos para el texto de subline */
-.sublineText {
-    font-size: 1rem;
-    line-height: 1.5;
-    max-width: 600px;
-    text-align: center; /* Centrar el texto */
+// .sublineText {
+//     font-size: 1rem;
+//     line-height: 1.5;
+//     max-width: 600px;
+//     text-align: center; /* Centrar el texto */
 
-    @media (max-width: 768px) {
-        font-size: 0.9rem;
-    }
+//     @media (max-width: 768px) {
+//         font-size: 0.9rem;
+//     }
 
-    @media (min-width: 480px) {
-        font-size: 0.7rem;
-    }
-}
+//     @media (min-width: 480px) {
+//         font-size: 0.7rem;
+//     }
+// }
 
 /* Estilos para el margen del avatar */
 .avatarMargin {
